@@ -8,6 +8,7 @@
  388717 improve connection error messages (Guilhem Bonnefille)
  393912 'cache article' processes selected articles in random order (Per Hedeland)
  395069 faster thread filtering
+ 395475 make the save dialog simpler and more consistent with other Gnome apps
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
